add view_res